# Apollo

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
apollo/: __init__.py  main.py  tokenizer.py  variants.py
docs/: apollo.md  datasets.md
examples/: moda_example.py  variants_example.py
tests/: bench_vs_transformer.py  small_benchmark.py  test_main.py  test_rope_debug.py  test_tokenizer.py
training/: 3b_fine_web_edu.py
