[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "apollo"
version = "0.5.0"
description = "Apollo — open-source theoretical reconstruction of the Claude Mythos Recurrent-Depth Transformer architecture"
license = "MIT"
authors = ["mrigankad <mriganka.uiux@gmail.com>"]
homepage = "https://github.com/mrigankad/Apollo"
documentation = "https://github.com/mrigankad/Apollo/blob/main/docs/apollo.md"
readme = "README.md"
repository = "https://github.com/mrigankad/Apollo"
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformers",
    "recurrent transformers",
    "looped transformers",
    "mixture of experts",
    "multi-latent attention",
    "grouped query attention",
    "adaptive computation time",
    "recurrent depth transformer",
    "LTI stability",
    "inference-time scaling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "2.11.0"
transformers = ">=4.40.0"
datasets = ">=2.18.0"

[tool.poetry.extras]
flash = ["flash-attn"]

[tool.poetry.dependencies.flash-attn]
version = ">=2.8.3"
optional = true


[tool.poetry.group.lint.dependencies]
black = ">=23.1,<27.0"
ruff = ">=0.5.1,<0.15.9"


[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1,<10.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[tool.ruff]
line-length = 88

[tool.black]
target-version = ["py310"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
